fix(verification): make SmtVerifier sound on nets with environment places
Environment places were never injected in the CHC/SMT encoding, so env-gated
transitions could never fire, the reachable set froze at the initial marking,
and safety bounds (e.g. placeBound) were vacuously reported "proven". Fixed
across Java, TypeScript, Rust and Python (VER-006).

- Emit an env-injection CHC rule per environment place (unbounded for
  AlwaysAvailable, M[p]<k-guarded for Bounded(k)), kept out of the flat
  transition list so deadlock-freedom stays meaningful.
- Make P-invariant computation env-aware (injector columns in the incidence
  matrix) so closed-net conservation laws are not misapplied to injectable
  places and silently re-freeze the net.
- Downgrade a would-be "proven" to "unknown" under Ignore mode with env places;
  skip the env-blind structural deadlock shortcut; relax the deadlock check so a
  net merely waiting for input is not reported as deadlocked.
- TypeScript: unify the SMT environment mode with the spec's three modes
  (alwaysAvailable/bounded/ignore; default alwaysAvailable). BREAKING for code
  importing `unbounded` from the verification entrypoint.
- Python: add environment_mode= to verify() with always_available/bounded/ignore
  constructors (the mode could not be selected before; it silently defaulted to
  Ignore).
- Rust: correct the SMT-LIB2 query and the sat/unsat->verdict mapping so the
  z3-feature pipeline produces correct verdicts.
- Add RED->GREEN regression tests in all four languages; amend spec VER-006.